# ZnNL

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  README.rst  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: black.yml  doc.yml  flake8.yml  isort.yml  nbtest.yml  pytest.yml
CI/integration_tests/: test_1.py
docs/: Makefile
docs/source/: conf.py  index.rst  modules_index.rst
examples/: Blurred-Training.ipynb  CIFAR10.ipynb  Class-wise-Collective-Variables.ipynb  Computing-Collective-Variables.ipynb  Computing-Entropy.ipynb  Contrastive-Loss.ipynb  Custom-Data-Generator.ipynb  HuggingFace_ResNet_Implementation.ipynb  MNIST-Example.ipynb  MNIST_Example.ipynb  Neural-Mutual-Information.ipynb  ResNet-Example.ipynb  ResNet_Implementation.ipynb  Simple-RND.ipynb  Simple_RND.ipynb  Using-Regularizers.ipynb  Using-Training-Strategies.ipynb  Using-the-Data-Recorders.ipynb  trace_regularization.ipynb
examples/neurips/: NeurIPS Analysis.ipynb  generate_scipt.sh  mnist_parent.py  recursive_submit.sh  submit.sh
examples/neurips_2022/: generate_scipt.sh  mnist_parent.py
examples/notebooks/: Entropy vs Accuracy.ipynb  Entropy_Results.ipynb  Entropy_and_Size.ipynb  MNIST_Example.ipynb  NTK_Study.ipynb  NeurIPSCIFAR10.ipynb  NeurIPSMNIST.ipynb  Neural_Tangents.ipynb  S(t).ipynb  Simple_RND.ipynb
examples/scripts/: circle_rnd.py  lattice_metric.py  simple_rnd.py
pyrnd/: __init__.py
znnl/: __init__.py
znnl/accuracy_functions/: __init__.py  accuracy_function.py  (+1 more)
znrnd/: .flake8  __init__.py  pyproject.toml
(+476 files in other folders)
