[tool.black]
line-length = 88
preview = true

[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.poetry]
name = "ZnNL"
version = "0.0.1"
description = "A python package to study neural learning."
authors = [
    "Konstantin Nikolaou <knikolaou@icp.uni-stuttgart.de>", 
    "Samuel Tovey <stovey@icp.uni-stuttgart.de>"
]
license = "Eclipse Public License - v 2.0"
readme = "README.rst"
repository = "https://github.com/zincware/ZnNL"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.22.2"
matplotlib = "^3.8.2"
Sphinx = "^7.2.6"
flake8 = "^7.0.0"
black = "^24.1.1"
requests = "^2.31.0"
ipython = "^8.21.0"
numpydoc = "^1.6.0"
optax = "^0.1.9"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-theme = "^2.0.0"
nbsphinx = "^0.9.3"
tensorflow-probability = "^0.23.0"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
jaxlib = "^0.4.23"
plotly = "^5.18.0"
flax = ">0.6.1"
tqdm = "^4.62.3"
pandas = "^2.2.0"
neural-tangents = "^0.6.5"
tensorflow-datasets = "^4.9.4"
isort = "^5.13.2"
pyyaml = "^6.0.1"
jupyter = "^1.0.0"
transformers = "^4.37.2"


[tool.poetry.group.jax]

[tool.poetry.group.jax.dependencies]
jax = {version = "^0.4.21", extras = ["cpu"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
